projects/examples/source/03.31.cpp
////////////////////////////////////////////////////////////////////

#include <print>
#include <utility>

////////////////////////////////////////////////////////////////////

class Entity
{
public :

	Entity(               ) { std::print("Entity:: Entity (1)\n"); }

	Entity(Entity const & ) { std::print("Entity:: Entity (2)\n"); }

	Entity(Entity       &&) { std::print("Entity:: Entity (3)\n"); }

   ~Entity(               ) { std::print("Entity::~Entity    \n"); }
};

////////////////////////////////////////////////////////////////////

auto make_entity_v1() 
{ 
	return Entity(); 
}

////////////////////////////////////////////////////////////////////

auto make_entity_v2()
{ 
	Entity entity;

//	return std::move(entity); // error
	
	return entity;
}

////////////////////////////////////////////////////////////////////

int main()
{
    [[maybe_unused]] auto entity_1 = make_entity_v1();
	
	[[maybe_unused]] auto entity_2 = make_entity_v2();
}

////////////////////////////////////////////////////////////////////